src/generated/_indent_v1/UONParser.js
"use strict";
// Generated from UON.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.String_minContext = exports.String_maxContext = exports.String_propertyContext = exports.String_propertiesContext = exports.String_validationContext = exports.Validation_propertiesContext = exports.Schema_uuidContext = exports.Schema_nameContext = exports.Schema_presentationContext = exports.Schema_presentationsContext = exports.AttributeContext = exports.AttributesContext = exports.SchemaContext = exports.Number_typeContext = exports.Yaml_valueContext = exports.Json_valueContext = exports.Root_valueContext = exports.NumberContext = exports.TemperatureContext = exports.TimeContext = exports.MassContext = exports.LengthContext = exports.QuantityContext = exports.Coercible_numeric_scalarContext = exports.Numeric_scalarContext = exports.Quantity_scalarContext = exports.UrlContext = exports.Boolean_scalarContext = exports.String_scalarContext = exports.ScalarContext = exports.Yaml_user_typeContext = exports.Json_user_typeContext = exports.Custom_typeContext = exports.StringContext = exports.OptionalContext = exports.DescriptionContext = exports.Presentation_propertyContext = exports.Presentation_propertiesContext = exports.Json_pairContext = exports.Pair_keyContext = exports.PairContext = exports.Seq_itemContext = exports.Yaml_seqContext = exports.Yaml_mapContext = exports.Yaml_collectionContext = exports.Json_seqContext = exports.Json_mapContext = exports.Json_collectionContext = exports.UonContext = exports.UONParser = void 0;
exports.NullContext = exports.FalseContext = exports.TrueContext = exports.BooleanContext = exports.Quantity_validation_typesContext = exports.Quantity_validationContext = exports.Number_validation_typeContext = exports.Number_minContext = exports.Number_maxContext = exports.Number_propertyContext = exports.Number_propertiesContext = exports.Number_validationContext = exports.Boolean_validationContext = exports.Url_validationContext = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class UONParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(UONParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return UONParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "UON.g4"; }
    // @Override
    get ruleNames() { return UONParser.ruleNames; }
    // @Override
    get serializedATN() { return UONParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    uon() {
        let _localctx = new UonContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, UONParser.RULE_uon);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 126;
                this.root_value();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    json_collection() {
        let _localctx = new Json_collectionContext(this._ctx, this.state);
        this.enterRule(_localctx, 2, UONParser.RULE_json_collection);
        try {
            this.state = 130;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case UONParser.OPEN_C_BRA:
                case UONParser.MAPPING_TYPE:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 128;
                        this.json_map();
                    }
                    break;
                case UONParser.OPEN_S_BRA:
                case UONParser.SEQUENCE_TYPE:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 129;
                        this.json_seq();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    json_map() {
        let _localctx = new Json_mapContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, UONParser.RULE_json_map);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 133;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.MAPPING_TYPE) {
                    {
                        this.state = 132;
                        this.match(UONParser.MAPPING_TYPE);
                    }
                }
                this.state = 135;
                this.match(UONParser.OPEN_C_BRA);
                this.state = 144;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.QUOTED_STRING || _la === UONParser.UNQUOTED_STRING) {
                    {
                        this.state = 136;
                        this.json_pair();
                        this.state = 141;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === UONParser.COMMA) {
                            {
                                {
                                    this.state = 137;
                                    this.match(UONParser.COMMA);
                                    this.state = 138;
                                    this.json_pair();
                                }
                            }
                            this.state = 143;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 146;
                this.match(UONParser.CLOSE_C_BRA);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    json_seq() {
        let _localctx = new Json_seqContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, UONParser.RULE_json_seq);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 149;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.SEQUENCE_TYPE) {
                    {
                        this.state = 148;
                        this.match(UONParser.SEQUENCE_TYPE);
                    }
                }
                this.state = 151;
                this.match(UONParser.OPEN_S_BRA);
                this.state = 160;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << UONParser.T__10) | (1 << UONParser.T__11) | (1 << UONParser.T__12) | (1 << UONParser.T__13) | (1 << UONParser.T__14) | (1 << UONParser.T__15) | (1 << UONParser.T__16) | (1 << UONParser.CT) | (1 << UONParser.QUOTED_STRING) | (1 << UONParser.STR_TYPE) | (1 << UONParser.BOOL_TYPE) | (1 << UONParser.URL_TYPE) | (1 << UONParser.FLOAT_TYPE))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (UONParser.FLOAT_128_TYPE - 32)) | (1 << (UONParser.FLOAT_64_TYPE - 32)) | (1 << (UONParser.FLOAT_32_TYPE - 32)) | (1 << (UONParser.INT_TYPE - 32)) | (1 << (UONParser.INT_128_TYPE - 32)) | (1 << (UONParser.INT_64_TYPE - 32)) | (1 << (UONParser.INT_32_TYPE - 32)) | (1 << (UONParser.UINT_TYPE - 32)) | (1 << (UONParser.UINT_128_TYPE - 32)) | (1 << (UONParser.UINT_64_TYPE - 32)) | (1 << (UONParser.UINT_32_TYPE - 32)) | (1 << (UONParser.UNQUOTED_STRING - 32)) | (1 << (UONParser.OPEN_C_BRA - 32)) | (1 << (UONParser.OPEN_S_BRA - 32)) | (1 << (UONParser.MAPPING_TYPE - 32)) | (1 << (UONParser.SEQUENCE_TYPE - 32)))) !== 0)) {
                    {
                        this.state = 152;
                        this.json_value();
                        this.state = 157;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === UONParser.COMMA) {
                            {
                                {
                                    this.state = 153;
                                    this.match(UONParser.COMMA);
                                    this.state = 154;
                                    this.json_value();
                                }
                            }
                            this.state = 159;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 162;
                this.match(UONParser.CLOSE_S_BRA);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    yaml_collection() {
        let _localctx = new Yaml_collectionContext(this._ctx, this.state);
        this.enterRule(_localctx, 8, UONParser.RULE_yaml_collection);
        try {
            this.state = 166;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case UONParser.QUOTED_STRING:
                case UONParser.UNQUOTED_STRING:
                case UONParser.MAPPING_TYPE:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 164;
                        this.yaml_map();
                    }
                    break;
                case UONParser.SEQUENCE_TYPE:
                case UONParser.MINUS:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 165;
                        this.yaml_seq();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    yaml_map() {
        let _localctx = new Yaml_mapContext(this._ctx, this.state);
        this.enterRule(_localctx, 10, UONParser.RULE_yaml_map);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 169;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.MAPPING_TYPE) {
                    {
                        this.state = 168;
                        this.match(UONParser.MAPPING_TYPE);
                    }
                }
                this.state = 172;
                this._errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1:
                            {
                                {
                                    this.state = 171;
                                    this.pair();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException_1.NoViableAltException(this);
                    }
                    this.state = 174;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
                } while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    yaml_seq() {
        let _localctx = new Yaml_seqContext(this._ctx, this.state);
        this.enterRule(_localctx, 12, UONParser.RULE_yaml_seq);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 177;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.SEQUENCE_TYPE) {
                    {
                        this.state = 176;
                        this.match(UONParser.SEQUENCE_TYPE);
                    }
                }
                this.state = 180;
                this._errHandler.sync(this);
                _alt = 1;
                do {
                    switch (_alt) {
                        case 1:
                            {
                                {
                                    this.state = 179;
                                    this.seq_item();
                                }
                            }
                            break;
                        default:
                            throw new NoViableAltException_1.NoViableAltException(this);
                    }
                    this.state = 182;
                    this._errHandler.sync(this);
                    _alt = this.interpreter.adaptivePredict(this._input, 11, this._ctx);
                } while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    seq_item() {
        let _localctx = new Seq_itemContext(this._ctx, this.state);
        this.enterRule(_localctx, 14, UONParser.RULE_seq_item);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 184;
                this.match(UONParser.MINUS);
                this.state = 185;
                this.yaml_value();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    pair() {
        let _localctx = new PairContext(this._ctx, this.state);
        this.enterRule(_localctx, 16, UONParser.RULE_pair);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 187;
                this.pair_key();
                this.state = 188;
                this.match(UONParser.COLON);
                this.state = 189;
                this.yaml_value();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    pair_key() {
        let _localctx = new Pair_keyContext(this._ctx, this.state);
        this.enterRule(_localctx, 18, UONParser.RULE_pair_key);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 191;
                this.string();
                this.state = 193;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.OPEN_PAR) {
                    {
                        this.state = 192;
                        this.presentation_properties();
                    }
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    json_pair() {
        let _localctx = new Json_pairContext(this._ctx, this.state);
        this.enterRule(_localctx, 20, UONParser.RULE_json_pair);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 195;
                this.pair_key();
                this.state = 196;
                this.match(UONParser.COLON);
                this.state = 197;
                this.json_value();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    presentation_properties() {
        let _localctx = new Presentation_propertiesContext(this._ctx, this.state);
        this.enterRule(_localctx, 22, UONParser.RULE_presentation_properties);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 199;
                this.match(UONParser.OPEN_PAR);
                this.state = 208;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.T__0 || _la === UONParser.T__1) {
                    {
                        this.state = 200;
                        this.presentation_property();
                        this.state = 205;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === UONParser.COMMA) {
                            {
                                {
                                    this.state = 201;
                                    this.match(UONParser.COMMA);
                                    this.state = 202;
                                    this.presentation_property();
                                }
                            }
                            this.state = 207;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                    }
                }
                this.state = 210;
                this.match(UONParser.CLOSE_PAR);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    presentation_property() {
        let _localctx = new Presentation_propertyContext(this._ctx, this.state);
        this.enterRule(_localctx, 24, UONParser.RULE_presentation_property);
        try {
            this.state = 214;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case UONParser.T__1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 212;
                        this.optional();
                    }
                    break;
                case UONParser.T__0:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 213;
                        this.description();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    description() {
        let _localctx = new DescriptionContext(this._ctx, this.state);
        this.enterRule(_localctx, 26, UONParser.RULE_description);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 216;
                this.match(UONParser.T__0);
                this.state = 217;
                this.match(UONParser.COLON);
                this.state = 218;
                this.string();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    optional() {
        let _localctx = new OptionalContext(this._ctx, this.state);
        this.enterRule(_localctx, 28, UONParser.RULE_optional);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 220;
                this.match(UONParser.T__1);
                this.state = 221;
                this.match(UONParser.COLON);
                this.state = 222;
                this.boolean();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    string() {
        let _localctx = new StringContext(this._ctx, this.state);
        this.enterRule(_localctx, 30, UONParser.RULE_string);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 224;
                _la = this._input.LA(1);
                if (!(_la === UONParser.QUOTED_STRING || _la === UONParser.UNQUOTED_STRING)) {
                    this._errHandler.recoverInline(this);
                }
                else {
                    if (this._input.LA(1) === Token_1.Token.EOF) {
                        this.matchedEOF = true;
                    }
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    custom_type() {
        let _localctx = new Custom_typeContext(this._ctx, this.state);
        this.enterRule(_localctx, 32, UONParser.RULE_custom_type);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 226;
                this.match(UONParser.CT);
                this.state = 227;
                this.match(UONParser.UNQUOTED_STRING);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    json_user_type() {
        let _localctx = new Json_user_typeContext(this._ctx, this.state);
        this.enterRule(_localctx, 34, UONParser.RULE_json_user_type);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 229;
                this.custom_type();
                this.state = 230;
                this.json_map();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    yaml_user_type() {
        let _localctx = new Yaml_user_typeContext(this._ctx, this.state);
        this.enterRule(_localctx, 36, UONParser.RULE_yaml_user_type);
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 232;
                this.custom_type();
                this.state = 233;
                this.yaml_map();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    scalar() {
        let _localctx = new ScalarContext(this._ctx, this.state);
        this.enterRule(_localctx, 38, UONParser.RULE_scalar);
        try {
            this.state = 239;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 16, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 235;
                        this.quantity_scalar();
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 236;
                        this.string_scalar();
                    }
                    break;
                case 3:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 237;
                        this.boolean_scalar();
                    }
                    break;
                case 4:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 238;
                        this.url();
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    string_scalar() {
        let _localctx = new String_scalarContext(this._ctx, this.state);
        this.enterRule(_localctx, 40, UONParser.RULE_string_scalar);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 242;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.STR_TYPE) {
                    {
                        this.state = 241;
                        this.match(UONParser.STR_TYPE);
                    }
                }
                this.state = 244;
                this.string();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    boolean_scalar() {
        let _localctx = new Boolean_scalarContext(this._ctx, this.state);
        this.enterRule(_localctx, 42, UONParser.RULE_boolean_scalar);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 247;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.BOOL_TYPE) {
                    {
                        this.state = 246;
                        this.match(UONParser.BOOL_TYPE);
                    }
                }
                this.state = 249;
                this.boolean();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    url() {
        let _localctx = new UrlContext(this._ctx, this.state);
        this.enterRule(_localctx, 44, UONParser.RULE_url);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 252;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === UONParser.URL_TYPE) {
                    {
                        this.state = 251;
                        this.match(UONParser.URL_TYPE);
                    }
                }
                this.state = 254;
                this.string();
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    quantity_scalar() {
        let _localctx = new Quantity_scalarContext(this._ctx, this.state);
        this.enterRule(_localctx, 46, UONParser.RULE_quantity_scalar);
        let _la;
        try {
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 256;
                this.numeric_scalar();
                this.state = 258;
